# Flying

./: .gitignore  pyproject.toml
bot/: settings.py
bot/apps/bot_management/: apps.py
bot/apps/bot_management/management/commands/: run_bot.py
bot/apps/botapp/: admin.py  main_bot.py  models.py
bot/apps/botapp/bot_callbacks/: __init__.py  callback_chain.py  personal_data_menu_callback_handler.py
bot/apps/botapp/bot_handlers/: __init__.py  handler_chain.py  main_menu_hanlder.py  personal_data_menu_handler.py
bot/apps/botapp/migrations/: 0001_initial.py
