[tool.poetry]
name = "flying"
version = "0.1.0"
description = ""
authors = ["Dolotina Kateryna"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.7"
django-grappelli = "*"
environs = "9.5.0"
gunicorn = "21.2.0"
pyTelegramBotAPI = "4.14.0"
aiohttp = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
